updating about-us.html rooms details are here text

--- a/about-us.html
+++ b/about-us.html
@@ -64,7 +64,7 @@
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./pages.html">Pages</a>
                     <ul class="dropdown">
-                        <li><a href="./room-details.html">Room Details</a></li>
+                        <li><a href="./room-details.html">Room Details are here</a></li>
                         <li><a href="./blog-details.html">Blog Details</a></li>
                         <li><a href="#">Family Room</a></li>
                         <li><a href="#">Premium Room</a></li>
