index.html master committed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Sona, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sona | Atriya Template changed 1</title>
+    <title>Sona | Atriya Template changed in master</title>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
                     </ul>
                 </div>
             </div>
-            <a href="#" class="bk-btn">Booking Now please!</a>
+            <a href="#" class="bk-btn">lets Booking Now please!</a>
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
@@ -137,7 +137,7 @@
                                     <li class="active"><a href="./index.html">Home Page</a></li>
                                     <li><a href="./rooms.html">Rooms</a></li>
                                     <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
+                                    <li><a href="./pages.html">main Pages</a>
                                         <ul class="dropdown">
                                             <li><a href="./room-details.html">Room Details</a></li>
                                             <li><a href="./blog-details.html">Blog Details</a></li>
